Fix spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -1,31 +1,32 @@
 html {
   font-family: Merriweather, serif;
+  background-color: #f2f2f2;
 }
 
 .vostok, .kosmos, .india, .eighteen {
-border-radius: 8px;
-background-color: #f2f2f2;
-border: #666;
-color: #333;
+  border-radius: 8px;
+  background-color: #ccc;
+  border: #666;
+  color: #333;
 }
 
 .remembrance {
-border-radius: 8px;
-background-color: #f2bcbc;
-border: #b92828;
-color: #991919;
+  border-radius: 8px;
+  background-color: #f2bcbc;
+  border: #b92828;
+  color: #991919;
 }
 
 .surtsey, .altitude {
-border-radius: 8px;
-background-color: #d1e0bf;
-border: #6b7e54;
-color: #51603f;
+  border-radius: 8px;
+  background-color: #d1e0bf;
+  border: #6b7e54;
+  color: #51603f;
 }
 
 .death, .premiere {
-border-radius: 8px;
-background-color: #d2d6f0;
-border: #1d38da;
-color: #38448e;
+  border-radius: 8px;
+  background-color: #d2d6f0;
+  border: #1d38da;
+  color: #38448e;
 }
